add api & validation

--- a/src/blocks/card/__like-button/card__like-button.css
+++ b/src/blocks/card/__like-button/card__like-button.css
@@ -18,3 +18,14 @@
 .card__like-button:hover {
   opacity: 0.6;
 }
+
+.card__like-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 3px;
+}
+
+.card__number-of-likes {
+  font-size: 13px;
+  text-align: center;
+}
