--- a/src/blocks/popup/__input/popup__input.css
+++ b/src/blocks/popup/__input/popup__input.css
@@ -20,3 +20,12 @@
     line-height: 15px;
   }
 }
+
+.popup__input_type_error {
+  border-bottom: 1px solid rgb(255 0 0);
+}
+
+.popup__error_visible {
+  color: rgb(255 0 0);
+  font-size: 12px;
+}
