--- a/src/blocks/profile/__description/profile__description.css
+++ b/src/blocks/profile/__description/profile__description.css
@@ -3,6 +3,9 @@
   line-height: 22px;
   grid-area: description;
   margin: 0;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  max-width: 295px;
 }
 
 @media screen and (max-width: 568px) {
